--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 llama-index-core>=0.12.10.post1
 llama-index-llms-groq>=0.3.1
 llama-index-embeddings-huggingface>=0.5.0
+llama-index-readers-file>=0.4.3
+
 sentence-transformers>=3.3.1
 
 # Environment and GUI
